ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/Documents__c.object-meta.xml
<CustomObject>
    <label>Documents</label>
    <nameField>
        <label>Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>