ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Aadhaar_Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Enrollment_Number__c</fullName>
    <label>Aadhaar Enrollment Number</label>
    <length>42</length>
    <type>Text</type>
</CustomField>