ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/AadhaarSeedingStatus__c.field-meta.xml
<CustomField>
    <fullName>AadhaarSeedingStatus__c</fullName>
    <label>AadhaarSeedingStatus</label>
    <length>1</length>
    <type>Text</type>
</CustomField>