ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Aadhar_Report_Image__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Report_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp;ContentVersionId__c, &quot;Aadhar Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aadhar Report Image</label>
    <type>Text</type>
</CustomField>