ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Aadhar_Source__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Source__c</fullName>
    <label>Aadhar Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTP</fullName>
            </value>
            <value>
                <fullName>Biometric</fullName>
            </value>
            <value>
                <fullName>Scan and Upload</fullName>
            </value>
            <value>
                <fullName>ScanAadhar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>