ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Aadhar_Vault_Code__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Vault_Code__c</fullName>
    <description>In case of ETB customer API will return vault code and not the aadhar number</description>
    <label>Aadhar Vault Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>