ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Additional_Document__c.field-meta.xml
<CustomField>
    <fullName>Additional_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Additional Documents</description>
    <label>Additional Document</label>
    <type>Checkbox</type>
</CustomField>