ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Addresss_Type__c.field-meta.xml
<CustomField>
    <fullName>Addresss_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Residential Address</fullName>
            </value>
            <value>
                <fullName>Permanent Residential Address</fullName>
            </value>
            <value>
                <fullName>Office Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>