ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Amount_of_transaction__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_transaction__c</fullName>
    <label>Amount of transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>