ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Applicant_name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_name__c</fullName>
    <formula>Applicant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant name</label>
    <type>Text</type>
</CustomField>