ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>applicant_Type__c</fullName>
    <formula>TEXT(Applicant__r.Applicant_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Type</label>
    <type>Text</type>
</CustomField>