ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Are_entered_details_as_per_document_uplo__c.field-meta.xml
<CustomField>
    <fullName>Are_entered_details_as_per_document_uplo__c</fullName>
    <label>Is RC Document legible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>