ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Are_entered_details_asper_doc_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Are_entered_details_asper_doc_uploaded__c</fullName>
    <label>Are entered details asper doc uploaded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>