ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Asset_Verification__c.field-meta.xml
<CustomField>
    <fullName>Asset_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Verification</label>
    <referenceTo>Asset_Verification__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>