ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Bank_Statement_Remarks_for_Seller__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_Remarks_for_Seller__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>