ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Biometric_Resend_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Biometric_Resend_Attempts__c</fullName>
    <label>Biometric Resend Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>