ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Borrower_Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Bank_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank name</label>
    <referenceTo>Bank_Masters__c</referenceTo>
    <relationshipName>Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>