ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Borrower_Good_Health_Dec_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Good_Health_Dec_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>