ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/BSR_Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>BSR_Occupation_Code__c</fullName>
    <label>BSR Occupation Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>