ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Buy_Seller_Indemnity_LTR_legible__c.field-meta.xml
<CustomField>
    <fullName>Buy_Seller_Indemnity_LTR_legible__c</fullName>
    <label>Buy-Seller Indemnity LTR legible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>