ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Buyer_Seller_Undertaking_Letter_legib__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Seller_Undertaking_Letter_legib__c</fullName>
    <label>Buyer-Seller Undertaking Letter legible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>