ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Buyer_Seller_Undertaking_Letter_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Seller_Undertaking_Letter_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>