ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>