ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Cheque_legible__c.field-meta.xml
<CustomField>
    <fullName>Cheque_legible__c</fullName>
    <label>Cheque legible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>