ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/City_CR__c.field-meta.xml
<CustomField>
    <fullName>City_CR__c</fullName>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>