ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CMU_Accept_Reject__c.field-meta.xml
<CustomField>
    <fullName>CMU_Accept_Reject__c</fullName>
    <label>CMU Accept/Reject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>