ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CMU_Comment__c.field-meta.xml
<CustomField>
    <fullName>CMU_Comment__c</fullName>
    <label>CMU Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>