ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CMU_Rejection_Fields__c.field-meta.xml
<CustomField>
    <fullName>CMU_Rejection_Fields__c</fullName>
    <label>CMU Rejection Fields</label>
    <type>TextArea</type>
</CustomField>