ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CMU_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>CMU_Rejection_Reason__c</fullName>
    <label>CMU Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CMU_Accept_Reject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect fields</fullName>
            </value>
            <value>
                <fullName>Documents reject or Customer Photo reject</fullName>
            </value>
            <value>
                <fullName>Incorrect document</fullName>
            </value>
            <value>
                <fullName>Signature missing</fullName>
            </value>
            <value>
                <fullName>Date of birth not available</fullName>
            </value>
            <value>
                <fullName>Form 60 not filled properly</fullName>
            </value>
            <value>
                <fullName>Form 60 image not clear</fullName>
            </value>
            <value>
                <fullName>Form 60 details not tallying with data points</fullName>
            </value>
            <value>
                <fullName>Blank form 60 attached</fullName>
            </value>
            <value>
                <fullName>PAN acknowledgement number incorrect / incomplete in Form 60</fullName>
            </value>
            <value>
                <fullName>Name of the applicant / customer does not match as per NSDL records</fullName>
            </value>
            <value>
                <fullName>Relationship not tagged properly</fullName>
            </value>
            <value>
                <fullName>Shareholding pattern not tagged properly</fullName>
            </value>
            <value>
                <fullName>Entity type mismatch</fullName>
            </value>
            <value>
                <fullName>Document number mismatch for mandatory documents</fullName>
            </value>
            <value>
                <fullName>DOI incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>