ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CoBorrower_Account_number__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Account_number__c</fullName>
    <label>Account number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>