ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/CoBorrower_Good_Health_Declaration_Remak__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Good_Health_Declaration_Remak__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>