ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Content_Document_Count__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Content Document Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>