ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Correctly_Captured__c.field-meta.xml
<CustomField>
    <fullName>Correctly_Captured__c</fullName>
    <label>Correctly Captured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>