ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Date_of_transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_of_transaction__c</fullName>
    <label>Date of transaction</label>
    <type>Date</type>
</CustomField>