ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Delivery_Date_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_of_Asset__c</fullName>
    <label>Delivery Date of Asset</label>
    <type>Date</type>
</CustomField>