ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/DETLS_asper_COBWR_bank_STMT_upload__c.field-meta.xml
<CustomField>
    <fullName>DETLS_asper_COBWR_bank_STMT_upload__c</fullName>
    <label>DETLS asper COBWR bank STMT upload?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>