ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/District_PR__c.field-meta.xml
<CustomField>
    <fullName>District_PR__c</fullName>
    <label>District</label>
    <length>20</length>
    <type>Text</type>
</CustomField>