ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/DL_Type__c.field-meta.xml
<CustomField>
    <fullName>DL_Type__c</fullName>
    <label>DL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO RICKSHAW – TRANSPORT</fullName>
            </value>
            <value>
                <fullName>AUTO RICKSHAW NON-TRANSPORT</fullName>
            </value>
            <value>
                <fullName>HEAVY GOOD VEHICLE</fullName>
            </value>
            <value>
                <fullName>HEAVY PASSENGER VEHICLE</fullName>
            </value>
            <value>
                <fullName>HEAVY TRANSPORT VEHICLE (GOODS AND PASSENGER VEHICLES)</fullName>
            </value>
            <value>
                <fullName>HEAVY TRANSPORT VEHICLE WITH HAZARDOUS MATERIALS</fullName>
            </value>
            <value>
                <fullName>LIGHT MOTOR VEHICLE – NON TRANSPORT</fullName>
            </value>
            <value>
                <fullName>LIGHT MOTOR VEHICLE – TRANSPORT</fullName>
            </value>
            <value>
                <fullName>MEDIUM GOODS VEHICLE</fullName>
            </value>
            <value>
                <fullName>MEDIUM PASSENGER VEHICLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>