ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Doc_for_Good_Health_coborrower_legible__c.field-meta.xml
<CustomField>
    <fullName>Doc_for_Good_Health_coborrower_legible__c</fullName>
    <label>Doc for Good Health(coborrower)legible?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>