ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/DocAuth_Passed__c.field-meta.xml
<CustomField>
    <fullName>DocAuth_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doc Auth Report Pass</label>
    <type>Checkbox</type>
</CustomField>