ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Document_Side__c.field-meta.xml
<CustomField>
    <fullName>Document_Side__c</fullName>
    <label>Document Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Selfie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>