ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seller&apos;s Passbook</fullName>
            </value>
            <value>
                <fullName>Seller&apos;s Bank Statement</fullName>
            </value>
            <value>
                <fullName>Seller&apos;s Cancel Cheque</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Voter Id</fullName>
            </value>
            <value>
                <fullName>Form 60</fullName>
            </value>
            <value>
                <fullName>Customer Image</fullName>
            </value>
            <value>
                <fullName>Aadhaar</fullName>
            </value>
            <value>
                <fullName>Vehicle Images</fullName>
            </value>
            <value>
                <fullName>RC Document</fullName>
            </value>
            <value>
                <fullName>SPR</fullName>
            </value>
            <value>
                <fullName>APR</fullName>
            </value>
            <value>
                <fullName>Electronic Bill</fullName>
                <label>Electricity Bill (within 2 months)</label>
            </value>
            <value>
                <fullName>Water Bill</fullName>
                <label>Water Bill (within 2 months)</label>
            </value>
            <value>
                <fullName>Vehicle Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Vehicle Image</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Insurance Policy Doc</fullName>
            </value>
            <value>
                <fullName>Valuation Report</fullName>
            </value>
            <value>
                <fullName>Office FI</fullName>
            </value>
            <value>
                <fullName>Land Photo</fullName>
            </value>
            <value>
                <fullName>Patta Document</fullName>
            </value>
            <value>
                <fullName>Rent Agreement/Reciept</fullName>
            </value>
            <value>
                <fullName>Pension Document</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Engine Number uploaded during verification</fullName>
            </value>
            <value>
                <fullName>Chassis Number uploaded during verification</fullName>
            </value>
            <value>
                <fullName>Selfie with Vehicle-uploaded during verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>