ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/documentApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>documentApprovedDate__c</fullName>
    <label>documentApprovedDate</label>
    <type>DateTime</type>
</CustomField>