ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/enter_details_asper_bank_STMT_upload__c.field-meta.xml
<CustomField>
    <fullName>enter_details_asper_bank_STMT_upload__c</fullName>
    <label>enter details asper bank STMT upload?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>