ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/enter_DETLS_as_per_BWR_canc_chq_upload__c.field-meta.xml
<CustomField>
    <fullName>enter_DETLS_as_per_BWR_canc_chq_upload__c</fullName>
    <label>enter DETLS as per BWR canc chq upload?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>