ProdIND/ProdPrograms/force-app/main/default/objects/Documents__c/fields/enter_DETLS_asper_BWR_bank_STMT_upload__c.field-meta.xml
<CustomField>
    <fullName>enter_DETLS_asper_BWR_bank_STMT_upload__c</fullName>
    <label>enter DETLS asper BWR bank STMT upload?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>